--- a/index.html
+++ b/index.html
@@ -100,13 +100,20 @@
     </section>
     <!-- Projetos -->
     <section id="projects" class="py-5">
+        <!-- Adicione este filtro no seu HTML -->
+        <!-- Adicione este filtro no seu HTML -->
         <div class="container containerProjects">
             <h2 class="text-center mb-4">Projetos</h2>
+            <div class="mb-3">
+                <label for="languageFilter" class="form-label">Filtrar por Linguagem:</label>
+                <select id="languageFilter" class="form-select"></select>
+            </div>
             <div class="row rowProject">
                 <!-- Os cards de projetos serão gerados dinamicamente aqui -->
             </div>
         </div>
     </section>
+
     <!-- Nova seção para o gráfico de contribuições -->
     <section id="contributions" class="py-5 bg-light">
         <div class="container">
