--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="container text-center text-md-left">
             <div class="row align-items-center">
                 <div class="col-md-4">
-                    <img src="caminho/para/sua/imagem.jpg" class="img-fluid rounded-circle" alt="Imagem do card"
+                    <img src="" class="img-fluid rounded-circle" alt="Imagem do card"
                         onerror="this.src='https://via.placeholder.com/300x200.png?text=Imagem+Indisponível'; this.alt='Imagem Indisponível';">
                 </div>
                 <div class="col-md-8">
